src/audio/dr_flac_bindings.rs

unsafe extern "C" {
    #[doc = "Opens a FLAC stream from the given callbacks and fully decodes it in a single operation. The return value is a\npointer to the sample data as interleaved signed 32-bit PCM. The returned data must be freed with drflac_free().\n\nYou can pass in custom memory allocation callbacks via the pAllocationCallbacks parameter. This can be NULL in which\ncase it will use DRFLAC_MALLOC, DRFLAC_REALLOC and DRFLAC_FREE.\n\nSometimes a FLAC file won't keep track of the total sample count. In this situation the function will continuously\nread samples into a dynamically sized buffer on the heap until no samples are left.\n\nDo not call this function on a broadcast type of stream (like internet radio streams and whatnot)."]
    pub fn drflac_open_and_read_pcm_frames_s32(
        onRead: drflac_read_proc,
        onSeek: drflac_seek_proc,
        onTell: drflac_tell_proc,
        pUserData: *mut cty::c_void,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int32;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_and_read_pcm_frames_s32(), except returns signed 16-bit integer samples."]
    pub fn drflac_open_and_read_pcm_frames_s16(
        onRead: drflac_read_proc,
        onSeek: drflac_seek_proc,
        onTell: drflac_tell_proc,
        pUserData: *mut cty::c_void,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int16;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_and_read_pcm_frames_s32(), except returns 32-bit floating-point samples."]
    pub fn drflac_open_and_read_pcm_frames_f32(
        onRead: drflac_read_proc,
        onSeek: drflac_seek_proc,
        onTell: drflac_tell_proc,
        pUserData: *mut cty::c_void,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut f32;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_and_read_pcm_frames_s32() except opens the decoder from a file."]
    pub fn drflac_open_file_and_read_pcm_frames_s32(
        filename: *const cty::c_char,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int32;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_file_and_read_pcm_frames_s32(), except returns signed 16-bit integer samples."]
    pub fn drflac_open_file_and_read_pcm_frames_s16(
        filename: *const cty::c_char,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int16;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_file_and_read_pcm_frames_s32(), except returns 32-bit floating-point samples."]
    pub fn drflac_open_file_and_read_pcm_frames_f32(
        filename: *const cty::c_char,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut f32;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_and_read_pcm_frames_s32() except opens the decoder from a block of memory."]
    pub fn drflac_open_memory_and_read_pcm_frames_s32(
        data: *const cty::c_void,
        dataSize: usize,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int32;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_memory_and_read_pcm_frames_s32(), except returns signed 16-bit integer samples."]
    pub fn drflac_open_memory_and_read_pcm_frames_s16(
        data: *const cty::c_void,
        dataSize: usize,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut drflac_int16;
}
unsafe extern "C" {
    #[doc = " Same as drflac_open_memory_and_read_pcm_frames_s32(), except returns 32-bit floating-point samples."]
    pub fn drflac_open_memory_and_read_pcm_frames_f32(
        data: *const cty::c_void,
        dataSize: usize,
        channels: *mut cty::c_uint,
        sampleRate: *mut cty::c_uint,
        totalPCMFrameCount: *mut drflac_uint64,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    ) -> *mut f32;
}
unsafe extern "C" {
    #[doc = "Frees memory that was allocated internally by dr_flac.\n\nSet pAllocationCallbacks to the same object that was passed to drflac_open_*_and_read_pcm_frames_*(). If you originally passed in NULL, pass in NULL for this."]
    pub fn drflac_free(
        p: *mut cty::c_void,
        pAllocationCallbacks: *const drflac_allocation_callbacks,
    );
}
#[doc = " Structure representing an iterator for vorbis comments in a VORBIS_COMMENT metadata block."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct struct_drflac_vorbis_comment_iterator {
    pub countRemaining: drflac_uint32,
    pub pRunningData: *const cty::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of struct_drflac_vorbis_comment_iterator"]
        [::core::mem::size_of::<struct_drflac_vorbis_comment_iterator>() - 8usize];
    ["Alignment of struct_drflac_vorbis_comment_iterator"]
        [::core::mem::align_of::<struct_drflac_vorbis_comment_iterator>() - 4usize];
    ["Offset of field: struct_drflac_vorbis_comment_iterator::countRemaining"]
        [::core::mem::offset_of!(struct_drflac_vorbis_comment_iterator, countRemaining) - 0usize];
    ["Offset of field: struct_drflac_vorbis_comment_iterator::pRunningData"]
        [::core::mem::offset_of!(struct_drflac_vorbis_comment_iterator, pRunningData) - 4usize];
};
#[doc = " Structure representing an iterator for vorbis comments in a VORBIS_COMMENT metadata block."]
pub type drflac_vorbis_comment_iterator = struct_drflac_vorbis_comment_iterator;
unsafe extern "C" {
    #[doc = "Initializes a vorbis comment iterator. This can be used for iterating over the vorbis comments in a VORBIS_COMMENT\nmetadata block."]
    pub fn drflac_init_vorbis_comment_iterator(
        pIter: *mut drflac_vorbis_comment_iterator,
        commentCount: drflac_uint32,
        pComments: *const cty::c_void,
    );
}
unsafe extern "C" {
    #[doc = "Goes to the next vorbis comment in the given iterator. If null is returned it means there are no more comments. The\nreturned string is NOT null terminated."]
    pub fn drflac_next_vorbis_comment(
        pIter: *mut drflac_vorbis_comment_iterator,
        pCommentLengthOut: *mut drflac_uint32,
    ) -> *const cty::c_char;
}
#[doc = " Structure representing an iterator for cuesheet tracks in a CUESHEET metadata block."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct struct_drflac_cuesheet_track_iterator {
    pub countRemaining: drflac_uint32,
    pub pRunningData: *const cty::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of struct_drflac_cuesheet_track_iterator"]
        [::core::mem::size_of::<struct_drflac_cuesheet_track_iterator>() - 8usize];
    ["Alignment of struct_drflac_cuesheet_track_iterator"]
        [::core::mem::align_of::<struct_drflac_cuesheet_track_iterator>() - 4usize];
    ["Offset of field: struct_drflac_cuesheet_track_iterator::countRemaining"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track_iterator, countRemaining) - 0usize];
    ["Offset of field: struct_drflac_cuesheet_track_iterator::pRunningData"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track_iterator, pRunningData) - 4usize];
};
#[doc = " Structure representing an iterator for cuesheet tracks in a CUESHEET metadata block."]
pub type drflac_cuesheet_track_iterator = struct_drflac_cuesheet_track_iterator;
#[doc = " The order of members here is important because we map this directly to the raw data within the CUESHEET metadata block."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct struct_drflac_cuesheet_track_index {
    pub offset: drflac_uint64,
    pub index: drflac_uint8,
    pub reserved: [drflac_uint8; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of struct_drflac_cuesheet_track_index"]
        [::core::mem::size_of::<struct_drflac_cuesheet_track_index>() - 16usize];
    ["Alignment of struct_drflac_cuesheet_track_index"]
        [::core::mem::align_of::<struct_drflac_cuesheet_track_index>() - 8usize];
    ["Offset of field: struct_drflac_cuesheet_track_index::offset"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track_index, offset) - 0usize];
    ["Offset of field: struct_drflac_cuesheet_track_index::index"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track_index, index) - 8usize];
    ["Offset of field: struct_drflac_cuesheet_track_index::reserved"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track_index, reserved) - 9usize];
};
#[doc = " The order of members here is important because we map this directly to the raw data within the CUESHEET metadata block."]
pub type drflac_cuesheet_track_index = struct_drflac_cuesheet_track_index;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct struct_drflac_cuesheet_track {
    pub offset: drflac_uint64,
    pub trackNumber: drflac_uint8,
    pub ISRC: [cty::c_char; 12usize],
    pub isAudio: drflac_bool8,
    pub preEmphasis: drflac_bool8,
    pub indexCount: drflac_uint8,
    pub pIndexPoints: *const drflac_cuesheet_track_index,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of struct_drflac_cuesheet_track"]
        [::core::mem::size_of::<struct_drflac_cuesheet_track>() - 32usize];
    ["Alignment of struct_drflac_cuesheet_track"]
        [::core::mem::align_of::<struct_drflac_cuesheet_track>() - 8usize];
    ["Offset of field: struct_drflac_cuesheet_track::offset"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, offset) - 0usize];
    ["Offset of field: struct_drflac_cuesheet_track::trackNumber"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, trackNumber) - 8usize];
    ["Offset of field: struct_drflac_cuesheet_track::ISRC"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, ISRC) - 9usize];
    ["Offset of field: struct_drflac_cuesheet_track::isAudio"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, isAudio) - 21usize];
    ["Offset of field: struct_drflac_cuesheet_track::preEmphasis"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, preEmphasis) - 22usize];
    ["Offset of field: struct_drflac_cuesheet_track::indexCount"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, indexCount) - 23usize];
    ["Offset of field: struct_drflac_cuesheet_track::pIndexPoints"]
        [::core::mem::offset_of!(struct_drflac_cuesheet_track, pIndexPoints) - 24usize];
};
pub type drflac_cuesheet_track = struct_drflac_cuesheet_track;
unsafe extern "C" {
    #[doc = "Initializes a cuesheet track iterator. This can be used for iterating over the cuesheet tracks in a CUESHEET metadata\nblock."]
    pub fn drflac_init_cuesheet_track_iterator(
        pIter: *mut drflac_cuesheet_track_iterator,
        trackCount: drflac_uint32,
        pTrackData: *const cty::c_void,
    );
}
